--- a/1a-Quarta-autoral-thequeen.html
+++ b/1a-Quarta-autoral-thequeen.html
@@ -21,8 +21,8 @@ Mas, recentemente, o The Queen anunciou que abriria as portas para outro tipo de
 ">
   
   <title>[blog] The Queen abre as portas para o Rock Autoral</title>
-  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
@@ -102,7 +102,12 @@ Mas, recentemente, o The Queen anunciou que abriria as portas para outro tipo de
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="espacodofa.html"><span class="fa fa-star mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Fãs
                         </a>
+                </li>
+                            <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="blog.html"><span class="icon54-v2-design-document mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Blog
+                        </a>
                 </li></ul>
+            
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="epk.html" target="_blank">Contratar</a></div>
         </div>
     </nav>
@@ -258,7 +263,7 @@ Mas, recentemente, o The Queen anunciou que abriria as portas para outro tipo de
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3q" data-rv-view="385" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3q" data-rv-view="366" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
