--- a/5-coisas-que-todo-fa-deve-saber.html
+++ b/5-coisas-que-todo-fa-deve-saber.html
@@ -15,8 +15,8 @@
 É de se esperar,portanto, que você não conheça tudo da banda. Nesse post eu separei as 5 coisas mais importantes quando o assunto é Lady Newton. ">
   
   <title>[blog] 5 coisas que todo fã deve saber sobre a Lady Newton</title>
-  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
@@ -96,7 +96,12 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="espacodofa.html"><span class="fa fa-star mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Fãs
                         </a>
+                </li>
+                            <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="blog.html"><span class="icon54-v2-design-document mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Blog
+                        </a>
                 </li></ul>
+            
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="epk.html" target="_blank">Contratar</a></div>
         </div>
     </nav>
@@ -288,7 +293,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3p" data-rv-view="478" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3p" data-rv-view="463" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
