--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -20,10 +20,10 @@ Breno Hoc - Sorte
 Cartada - Cartada Final">
   
   <title>[blog] 5 clipes para maratonar</title>
-  <link rel="stylesheet" href="assets/icon54-v2/style.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -89,7 +89,12 @@ Cartada - Cartada Final">
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="espacodofa.html"><span class="fa fa-star mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Fãs
                         </a>
+                </li>
+                            <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="blog.html"><span class="icon54-v2-design-document mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Blog
+                        </a>
                 </li></ul>
+            
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="epk.html" target="_blank">Contratar</a></div>
         </div>
     </nav>
@@ -246,7 +251,7 @@ Cartada - Cartada Final">
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jlRZearR0bNMlJG0j1zVrlKTpDZOHSqxXjLQMnQTiNqEMR4LpGlSt7AVjtE6uOpWWxke90rmjO2HQ5R0+lZIuMJJf1zICJYhZ3+vEEPOXI/J0SEq5DFwPFs7YMhzcSGK.Ca5pIsip3DpQxXcBpDsegaop59G358HKGWOkkQ13gfX/g6Xrq7VcidaFuHnSeuIVaDa3FvzAxuGjfQZj34QLirYk9xU5/rd5KRD1IjkFKpSY1WLoMzWFMGNGS0pUnyp5">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yn2CW27vvu1KO+g94GdrNzn+Srd2GuUHdj/Rdob3pTrBcCd8QQ7dvfYPWhD12m9GMSZUU5cZg5sgFO54SnHaP4nfpxha8/XIr1BvUh+ouJcK4nRyCafnx6XskhoCqj9/.sK1y+bm8MY0C6I9bm9ZTDtUaJEnajVjbJXLpehA9q3+QEkADx+w+4XdVdSBbcowucbTStBrd1I4dn6teHHqfoZhCci8kkZJX2T8yZtPyp0OQAM3RGA6tINnmpg8PsqtZ">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -377,7 +382,7 @@ Cartada - Cartada Final">
         </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-4i" data-rv-view="578" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-4i" data-rv-view="567" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
