--- a/blog_Mascates-e-Cospefogo-invadiram-a-zona-sul.html
+++ b/blog_Mascates-e-Cospefogo-invadiram-a-zona-sul.html
@@ -16,8 +16,8 @@
 Continua lendo para ver a minha experiência em mais detalhe,que tal  me acompanhar nessa descoberta?">
   
   <title>[blog] Mascates e Cospefogo invadiram a Zona Sul!</title>
-  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
@@ -97,7 +97,12 @@ Continua lendo para ver a minha experiência em mais detalhe,que tal  me acompan
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="espacodofa.html"><span class="fa fa-star mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Fãs
                         </a>
+                </li>
+                            <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="blog.html"><span class="icon54-v2-design-document mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Blog
+                        </a>
                 </li></ul>
+            
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="epk.html" target="_blank">Contratar</a></div>
         </div>
     </nav>
@@ -214,7 +219,7 @@ Continua lendo para ver a minha experiência em mais detalhe,que tal  me acompan
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-43" data-rv-view="519" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-43" data-rv-view="506" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
