--- a/epk.html
+++ b/epk.html
@@ -10,15 +10,16 @@
   <meta name="description" content="Eletronic Press Kit - Material para produtores, mídia e pessoas que querem conhecer o lado sério da Lady Newton. ">
   
   <title>EPK</title>
-  <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -74,7 +75,12 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="espacodofa.html"><span class="fa fa-star mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Fãs
                         </a>
+                </li>
+                            <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="blog.html"><span class="icon54-v2-design-document mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Blog
+                        </a>
                 </li></ul>
+            
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="epk.html" target="_blank">Contratar</a></div>
         </div>
     </nav>
@@ -204,7 +210,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m9azNQpl/Oo2u2L+/fFcwYeeoa7MKRnXfKoczapr2NHBiT9KmyQkGNOhpnJqt4Hze8pw98GmgpfdGpdTYyt+je4oLKCv+Gdz/gHx2gjSBKUGqqgTNOn+kpqT19vnUqag.ygLy7I3Vy0tRLnrqJpgRjbd60ulQ/RgY1rqMeSYvs2nnqRv18LwtJhaVabC7Q0jW2OAQ671vO38qUAqzOpjr/0JUY5LZzpksPGaZ5vYgJfzHb5LryVR7r7gTaEMur/Un">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WEY9KeF2lFzqZQNFKkNtk6AnsHZHSSt32rAwmIGhwXZx13bOsUzw5a5o/xrzFlVBd/y3z91hRzxAcbYHu66/MP8eE/1NAauIY0ABFEdX5eMFPQHR8b2lnp858d316D9c.nhh5c3qM8LtMdHqeST3f6Sr6Ij3RvvX0ylrCbhL+74itkjCaFQBdaW3BPmNY0OrPTe64jJh0x5M2S1SUAnx2dqmxcJE51jotHWECE2jRt5jt8sboeD6yw5NlGpPJH8Xc">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
@@ -333,12 +339,12 @@ Se preferir, entre em contato pelo nosso whatsapp
   <script src="https://apis.google.com/js/plusone.js"></script>
   <script src="assets/facebook-plugin/facebook-script.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid.min.js"></script>
   
