--- a/kitdofa.html
+++ b/kitdofa.html
@@ -10,6 +10,7 @@
   <meta name="description" content="link secreto apenas para os fãs que entraram na lista da lady newton ;)">
   
   <title>Kitdofa</title>
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
@@ -74,7 +75,12 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="espacodofa.html"><span class="fa fa-star mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Fãs
                         </a>
+                </li>
+                            <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="blog.html"><span class="icon54-v2-design-document mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Blog
+                        </a>
                 </li></ul>
+            
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="epk.html" target="_blank">Contratar</a></div>
         </div>
     </nav>
@@ -128,7 +134,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-2b" data-rv-view="333" style="background-color: rgb(0, 0, 0); padding-top: 1.5rem; padding-bottom: 1.5rem;">
+<section class="mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-2b" data-rv-view="312" style="background-color: rgb(0, 0, 0); padding-top: 1.5rem; padding-bottom: 1.5rem;">
     <div class="mbr-section__container addons-container addons-row">
             <div class=" addons-container-inner">
                 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
@@ -272,8 +278,8 @@
 </section>
 
 
-  <script src="assets/popper/popper.min.js"></script>
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <script src="assets/popper/popper.min.js"></script>
   <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5"></script>
   <script src="https://apis.google.com/js/plusone.js"></script>
   <script src="assets/facebook-plugin/facebook-script.js"></script>
