create github pages

--- a/espacodofa.html
+++ b/espacodofa.html
@@ -223,7 +223,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3B8iJuoIZCH9sDIoNxixqBAZ9sCMzp4+vrzznK+haNA5oLb4s/FY56u3Ye8QzSaOppJZI1PivUWXT11HM5capfc9UdYPa8+VMyRqq7m2MIjsh3OWG9yDvsuQB01wnO/Y.sds/dzPQZljBzgvUY5cNALJqj2KGfzAKIRON9kqVNFTOGk+XSHx19eo8FMA4V/9nBrPp1FvQ8oD+2XM/kEP1tEndS40BLR2YSLV20QEgHcXzVP8wnR6sU3OFgWVOphZs">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dvy/c/kTg0SWOs+irx2V5B19ABK/u5PtUvyoASeW6/NNkyHqreOmCDr7DZNr23OAItBdcCDbIU+2wa/2IRJI/hRh78bwmsiH5dcImLSKGZoIQdRZgV+d4lxSvDmAoFNF.Uvog5zzkVQFvvuRhEZeGYnSE/s5RM2M11rGkIb2IIZXXTmAFaD5tI+J2uG/ufgHMCRrgXObVUgBVcpQe1CHYDpOlJAyOmBwfC0wogjMCaYsexSOOCwz+zGqEmTJSliaP">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -281,7 +281,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" class="text-white" target="_blank"><strong>Cena Recifense</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
