--- a/5-coisas-que-todo-fa-deve-saber.html
+++ b/5-coisas-que-todo-fa-deve-saber.html
@@ -293,7 +293,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3p" data-rv-view="463" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3p" data-rv-view="517" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
@@ -368,7 +368,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" class="text-white" target="_blank"><strong>Cena Recifense</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
