--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -251,7 +251,7 @@ Cartada - Cartada Final">
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yn2CW27vvu1KO+g94GdrNzn+Srd2GuUHdj/Rdob3pTrBcCd8QQ7dvfYPWhD12m9GMSZUU5cZg5sgFO54SnHaP4nfpxha8/XIr1BvUh+ouJcK4nRyCafnx6XskhoCqj9/.sK1y+bm8MY0C6I9bm9ZTDtUaJEnajVjbJXLpehA9q3+QEkADx+w+4XdVdSBbcowucbTStBrd1I4dn6teHHqfoZhCci8kkZJX2T8yZtPyp0OQAM3RGA6tINnmpg8PsqtZ">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gDRGZa5wyNyrtufYsmR8wA3J3nowwECqCmPFpeMl/R27/75UT1mvrnpi/3GZ8ja+AIXiISBdse83jiqrSENnoOipl9B9q9W5cJNf42uGq8NkdAZsE9jXTxnSiPiPgIEg.j+k0jEmYpgpTklIi+Vei37YuG9CUDUCCAp+CUu1fEed1gAuKOQMOmKxUsf9xnP3LK+qGZQepxWeQD+iH0/dWx3RdOwmIs6AAqsJ32k3CfMK24Sm8XmpTE4O1lSWAmaIm">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -382,7 +382,7 @@ Cartada - Cartada Final">
         </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-4i" data-rv-view="567" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-4i" data-rv-view="621" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
@@ -457,7 +457,7 @@ Cartada - Cartada Final">
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" class="text-white" target="_blank"><strong>Cena Recifense</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
