--- a/epk.html
+++ b/epk.html
@@ -210,7 +210,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WEY9KeF2lFzqZQNFKkNtk6AnsHZHSSt32rAwmIGhwXZx13bOsUzw5a5o/xrzFlVBd/y3z91hRzxAcbYHu66/MP8eE/1NAauIY0ABFEdX5eMFPQHR8b2lnp858d316D9c.nhh5c3qM8LtMdHqeST3f6Sr6Ij3RvvX0ylrCbhL+74itkjCaFQBdaW3BPmNY0OrPTe64jJh0x5M2S1SUAnx2dqmxcJE51jotHWECE2jRt5jt8sboeD6yw5NlGpPJH8Xc">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XLPJUXaysYHzHLx5eEWg9DUReLaMm3CxnTk7sI1m6T3t5xD89d08ciVqg1tzu24ju1pCO+HGcKBrBc6BuuXhhuoeEb4u1SRY3ya8qy2N4IAib9F7P4wYHVz60VzZbscb.6/JpO6fw8hFreoKX0A9TaNXpzLH3AZBfwScxRBJzV5sMiFxzpk++Wwc91ui8npe248UWvoUI9F0YP5/VmzI538KUDJ9WI5lrruIeRlKaGtKdekioqyix8kn+88mI9Aru">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
@@ -300,7 +300,7 @@ Se preferir, entre em contato pelo nosso whatsapp
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" class="text-white" target="_blank"><strong>Cena Recifense</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
