--- a/videos.html
+++ b/videos.html
@@ -236,7 +236,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" class="text-white" target="_blank"><strong>Cena Recifense</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
