create github pages

--- a/cenarecife.html
+++ b/cenarecife.html
@@ -325,7 +325,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 30%;">
-                      <a href="https://open.spotify.com/track/7KwBhh3GBjRSlhkrjrPCdf?si=lJ0jW-jvQkG9C-5hn1OYQA"><img src="assets/images/whatsapp-image-2020-04-09-at-11.12.22-224x224.jpeg" alt="" title=""></a>  
+                      <a href="https://open.spotify.com/album/0JlBsFRWZQ7nuPBeR28Rop?si=GaIZV7utTh-gIuFKErC29A" target="_blank"><img src="assets/images/whatsapp-image-2020-04-09-at-11.12.22-224x224.jpeg" alt="" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
