--- a/cenarecife.html
+++ b/cenarecife.html
@@ -285,7 +285,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><br><strong>19 de Março de 2020. &nbsp;</strong><a href="http://instagram.com/sargaconightclub" target="_blank" class="text-secondary">Sargaço Night Club</a>&nbsp;lança o álbum"Bootleg Espiral das Artes, Pt. 2 (Ao Vivo)", com participação de <a href="http://instagram.com/zecavianamusic" target="_blank" class="text-secondary">Zeca Viana</a></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><strong>19 de Março de 2020. &nbsp;</strong><a href="http://instagram.com/sargaconightclub" target="_blank" class="text-secondary">Sargaço Night Club</a>&nbsp;lança o álbum"Bootleg Espiral das Artes, Pt. 2 (Ao Vivo)", com participação de <a href="http://instagram.com/zecavianamusic" target="_blank" class="text-secondary">Zeca Viana</a></p>
                         </div>
                     </div>
                 </div>
@@ -329,7 +329,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><br><strong>14 de Março de 2020.</strong><a href="http://instagram.com/baha.oficial" target="_blank" class="text-secondary">&nbsp;</a><a href="http://instagram.com/kingsizerotation" target="_blank" class="text-secondary">King Size Rotation</a>&nbsp;lança o single "Selfish Me".&nbsp;</p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><strong><br></strong><strong>14 de Março de 2020.</strong><a href="http://instagram.com/baha.oficial" target="_blank" class="text-secondary">&nbsp;</a><a href="http://instagram.com/kingsizerotation" target="_blank" class="text-secondary">King Size Rotation</a>&nbsp;lança o single "Selfish Me".&nbsp;</p>
                         </div>
                     </div>
                 </div>
@@ -351,7 +351,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><br><strong>12 de Março de 2020. &nbsp;</strong><a href="http://instagram.com/sargaconightclub" target="_blank" class="text-secondary">Sargaço Night Club</a>&nbsp;lança o álbum"Bootleg Espiral das Artes, Pt. 1 (Ao Vivo)", com participação de <a href="http://instagram.com/zecavianamusic" target="_blank" class="text-secondary">Zeca Viana</a></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><strong>12 de Março de 2020. &nbsp;</strong><a href="http://instagram.com/sargaconightclub" target="_blank" class="text-secondary">Sargaço Night Club</a>&nbsp;lança o álbum"Bootleg Espiral das Artes, Pt. 1 (Ao Vivo)", com participação de <a href="http://instagram.com/zecavianamusic" target="_blank" class="text-secondary">Zeca Viana</a></p>
                         </div>
                     </div>
                 </div>
