create github pages

--- a/cenarecife.html
+++ b/cenarecife.html
@@ -281,11 +281,11 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 30%;">
-                      <a href="https://open.spotify.com/album/2I7fMl7MGSnb8JREC0SsLj?si=65uozVw0QwWYeB-3COXEHA" target="_blank"><img src="assets/images/sargaco2-224x222.jpg" alt="" title=""></a>  
+                      <a href="https://open.spotify.com/album/2I7fMl7MGSnb8JREC0SsLj?si=65uozVw0QwWYeB-3COXEHA"><img src="assets/images/sargaco2-224x222.jpeg" alt="" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><strong>19 de Março de 2020. &nbsp;</strong><a href="http://instagram.com/sargaconightclub" target="_blank" class="text-secondary">Sargaço Night Club</a>&nbsp;lança o álbum"Bootleg Espiral das Artes, Pt. 2 (Ao Vivo)", com participação de <a href="http://instagram.com/zecavianamusic" target="_blank" class="text-secondary">Zeca Viana</a></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><strong>19 de Março de 2020. &nbsp;</strong><a href="http://instagram.com/sargaconightclub" target="_blank" class="text-secondary">Sargaço Night Club</a>&nbsp;lança o álbum "Bootleg Espiral das Artes, Pt. 2 (Ao Vivo)", com participação de <a href="http://instagram.com/zecavianamusic" target="_blank" class="text-secondary">Zeca Viana</a></p>
                         </div>
                     </div>
                 </div>
