create github pages

--- a/show.html
+++ b/show.html
@@ -102,7 +102,7 @@
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 80%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/XXBhySn1q3M?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/XXBhySn1q3M?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
@@ -115,8 +115,8 @@
         <div class="media-container-row">
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
-                    <div class="mbr-figure" style="width: 60%;">
-                      <a href="http://www.instagram.com/braunmusicstudio" target="_blank"><img src="assets/images/logobms-ok-436x327.png" alt="" title=""></a>  
+                    <div class="mbr-figure" style="width: 65%;">
+                      <a href="http://www.instagram.com/braunmusicstudio" target="_blank"><img src="assets/images/logobms-ok-436x327.png" alt="Braun" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
