create github pages

--- a/show.html
+++ b/show.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
-  <meta name="description" content="==em construção==">
+  <meta name="description" content="">
   
   <title>Show da Lady</title>
   <link rel="stylesheet" href="assets/icon54-v2/style.css">
