--- a/cenarecife.html
+++ b/cenarecife.html
@@ -153,7 +153,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>10 de Abril de 2020. </strong><a href="http://instagram.com/julianapaim_" target="_blank" class="text-secondary">Juliana Paim</a> lança o clipe "Quem foi que disse".<br></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><strong>10 de Abril de 2020. </strong><a href="http://instagram.com/julianapaim_" target="_blank" class="text-secondary">Juliana Paim</a> lança o clipe "Quem foi que disse".<br></p>
                         </div>
                     </div>
                 </div>
