--- a/blog.html
+++ b/blog.html
@@ -122,7 +122,7 @@
     </div>
 </section>
 
-<section class="cid-rWfZmL2qSL" data-bg-video="https://youtu.be/WmLY_DaX5i4" id="header2-7m">
+<section class="cid-rWfZmL2qSL" id="header2-7m">
 
     
 
@@ -373,8 +373,6 @@
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/popup-plugin/script.js"></script>
   <script src="assets/popup-ontimer-plugin/script.js"></script>
   <script src="assets/popup-overlay-plugin/script.js"></script>
