create github pages

--- a/live.html
+++ b/live.html
@@ -118,7 +118,7 @@
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 70%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/live_chat?v=EcDLqNKj4Lk&amp;embed_domain=http://ladynewtonoficial.github.io/mobirise" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://studio.youtube.com/live_chat?v=EcDLqNKj4Lk;embed_domain=ladynewton.com" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
