create github pages

--- a/blog_allyouneedislives.html
+++ b/blog_allyouneedislives.html
@@ -223,7 +223,7 @@
                      <p><strong>Mas a parte mais irada do evento eu reservei pro final!</strong></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Os músicos fizeram um grupo no whatsapp do evento, e a gente trocou muitas mensagens e ideias, dentre elas o querido<a href="http://instagram.com/castrocaue" target="_blank"> Cauê Castro </a>se prontificou a fazer um video massa. Todo mundo iria mandar um clipe cantando ou tocando a música "All you need is Love" dos Beatles, e<em> Cauê</em> juntaria tudo.<br><br>Nem preciso dizer que ficou algo incrível, um video que vale a pena ser compartilhado e mostrado ao mundo. A Lady Newton contou com Vitor na guitarra, infelizmente eu não consegui mandar a tempo a minha contribuição!&nbsp;<br><br>O grande <a href="http://instagram.com/alekrin" target="_blank">Alekrin </a>ajudou na mixagem, pra deixar o som ainda mais redondinho, &nbsp;confere o video ai:</p>
+                     <p>Os músicos fizeram um grupo no whatsapp do evento, e a gente trocou muitas mensagens e ideias, dentre elas o querido<a href="http://instagram.com/castrocaue" target="_blank"> Cauê Castro </a>se prontificou a fazer um vídeo massa. Todo mundo iria mandar um clipe cantando ou tocando a música "All you need is Love" dos Beatles, e<em> Cauê</em> juntaria tudo.<br><br>Nem preciso dizer que ficou algo incrível, um vídeo que vale a pena ser compartilhado e mostrado ao mundo. A Lady Newton contou com Vitor na guitarra, infelizmente eu não consegui mandar a tempo a minha contribuição!&nbsp;<br><br>O grande <a href="http://instagram.com/alekrin" target="_blank">Alekrin </a>ajudou na mixagem, pra deixar o som ainda mais redondinho, &nbsp;confere o vídeo ai:</p>
                 </div>
                 
             </div>
@@ -258,7 +258,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-6j" data-rv-view="793" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-6j" data-rv-view="773" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
