create github pages

--- a/blog_a_historia_da_lady_em_videos.html
+++ b/blog_a_historia_da_lady_em_videos.html
@@ -139,7 +139,7 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">Vídeo 1 : Registros do Passado</h1>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Esse é um compilado de todos os momentos iniciais da banda, sem som.</p>
+                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Esse é um compilado de todos os momentos iniciais da banda, sem som.<br>se você tá no celular, <a href="https://www.youtube.com/FNgwULyagm8" target="_blank">clique aqui pra ver no youtube!</a></p>
                 
             </div>
         </div>
