create github pages

--- a/blog_allyouneedislives.html
+++ b/blog_allyouneedislives.html
@@ -362,7 +362,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                             <span class="mbr-iconfont mbr-iconfont-social fa-facebook-official fa"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.youtube.com/channel/UCSvIbkRHKd4szCvhxex0coA" target="_blank">
+                        <a href="https://www.youtube.com/channel/UCSvIbkRHKd4szCvhxex0coA?sub_confirmation=1" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social fa-play-circle fa"></span>
                         </a>
                     </div></div>
