--- a/live.html
+++ b/live.html
@@ -179,7 +179,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Pela primeira vez, uma live de quarentena com Todos membros da banda ao mesmo tempo!</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Aqui embaixo vamos deixar um quadro para as perguntas dos fãs, vamos responder a todas elas durante a live, participe!</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Aqui embaixo vamos deixar um quadro para as perguntas dos fãs, vamos responder a todas elas durante a live, participe!<br><br>E se você quiser ajudar muito a banda, <a href="https://www.youtube.com/channel/UCSvIbkRHKd4szCvhxex0coA?sub_confirmation=1" target="_blank">já se inscreve no nosso canal do youtube!</a></h3>
                 
             </div>
         </div>
@@ -249,7 +249,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                             <span class="mbr-iconfont mbr-iconfont-social fa-facebook-official fa"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.youtube.com/channel/UCSvIbkRHKd4szCvhxex0coA" target="_blank">
+                        <a href="https://www.youtube.com/channel/UCSvIbkRHKd4szCvhxex0coA?sub_confirmation=1" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social fa-play-circle fa"></span>
                         </a>
                     </div></div>
