--- a/ampulheta.html
+++ b/ampulheta.html
@@ -193,7 +193,7 @@
                             <span class="mbr-iconfont mbr-iconfont-social fa-facebook-official fa"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.youtube.com/channel/UCSvIbkRHKd4szCvhxex0coA" target="_blank">
+                        <a href="https://www.youtube.com/channel/UCSvIbkRHKd4szCvhxex0coA?sub_confirmation=1" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social fa-play-circle fa"></span>
                         </a>
                     </div></div>
