--- a/epk.html
+++ b/epk.html
@@ -210,7 +210,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1G0tlbnMRIkiCQSnRrDf43js++CAKbv4hn86ZSKHDx2K93zf7b9AS+VrlVGtWD0tFlfKX6TsGH9kFRb32D8lsvZuZTD6jkH293CsF6R0HWsqhWqVt8OSt0nD0fA3yC6z.t4fCY8xm6U/AAU/4R8wT0ksFYd/8cFM5D98jEY600OOnYXnTr5zIEpDE7ci9a6be1SlaOeVPd2Qbzcd7FAZFfiW15mIb2U4UcjQIpmXCEcNfr2eW9aGekdH2neQ9f5L4">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="J7pzJfkj4ReHVK1gCNDX4fcsKOU7mZ4xDhbnhdjQdJec2tje14+Ovif780F/3YLvDhISWNX4aRkNcK5VZtCmq1Gc+VWrwL+0iizj3/C81oZq05OPWFDabBftkKNAC113.EDqRRLPGq6Upxdaoom8t673BNvct/XJ7zE9p/bEiJtSyAC/tOAhFJY4yzcfEE3zWqOsAEJSc5t5PeNhlEG7yj78FZKlJBOk4XwkjhSq6l+x/rW9Z0YeJMVMgfhYJCViY">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
@@ -319,7 +319,7 @@ Se preferir, entre em contato pelo nosso whatsapp
                             <span class="mbr-iconfont mbr-iconfont-social fa-facebook-official fa"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.youtube.com/channel/UCSvIbkRHKd4szCvhxex0coA" target="_blank">
+                        <a href="https://www.youtube.com/channel/UCSvIbkRHKd4szCvhxex0coA?sub_confirmation=1" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social fa-play-circle fa"></span>
                         </a>
                     </div></div>
