create github pages

--- a/epk.html
+++ b/epk.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
@@ -78,6 +79,10 @@
                 </li>
                             <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="blog.html"><span class="icon54-v2-design-document mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Blog
+                        </a>
+                </li>
+                                        <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="live.html" target="_blank"><span class="socicon socicon-youtube mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Live
                         </a>
                 </li></ul>
             
@@ -210,7 +215,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KtjAQhWSKhuenUiHNkIhKwDwtYO2uUtu94tCu2fZvJUYrqGUZVlo6DnKN5w5JEj1790X841DFly+LF+k5ax4W/MPDXdYESwRPMWKWasyTPzRcYa5+AGUVvAH87qfeRFJ.uWoUV45FfcvIYaaCQjknhGTKchydtUwOsw40T1Nfo73G7g8t4N8//vLzV40k8qYvG6fCkvqfGpLYVV9+yG47h8+BJPFzv+h3kaX/JiYDrozd9j0+yjMvw8/klVDE4uP7">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DlYoMP+T6YGWLKiCWtN8OxBoOluA2A4RV7IwX6U+hZqIBQ2+t0tG33GZlORwrd0snWhDm422UG6fJqyWXpc7PKPTqHkmf2XGziN0+CN7sWcOoxM/dESYfY9OyVJWAv32.w6HtutHmvOXKzzvtuUsLDOjDMVBwxOxh7Tjl1URwXOPKaFlLEcvTYPntCxFnQLmoyIfhrShVqz4AFuSWuNAxJDG/ysGQUG1PUIjLzthoYYs0aBQB7LIwei+UOSXZLOdv">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
@@ -300,7 +305,7 @@ Se preferir, entre em contato pelo nosso whatsapp
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><strong><a href="live.html" target="_blank" class="text-white"><b>Live</b></a></strong></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
