--- a/ampulheta.html
+++ b/ampulheta.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -77,6 +78,10 @@
                 </li>
                             <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="blog.html"><span class="icon54-v2-design-document mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Blog
+                        </a>
+                </li>
+                                        <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="live.html" target="_blank"><span class="socicon socicon-youtube mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Live
                         </a>
                 </li></ul>
             
@@ -174,7 +179,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" target="_blank" class="text-white"><strong>Cena Autoral</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><strong><a href="live.html" target="_blank" class="text-white"><b>Live</b></a></strong></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
