create github pages

--- a/conhecaladynewton.html
+++ b/conhecaladynewton.html
@@ -202,7 +202,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-1">
-                            Diogo Leal</h4>
+                            Diogo <br>Leal</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Graduado em Engenharia Mecânica, engenheiro de projetos de uma das maiores montadoras de carros do país. Diogo é o baixista mais querido do Recife. Ele foi a peça que faltava para começar a banda e chegou para ficar. Além do baixo, Diogo também é vocalista e canta algumas musicas do nosso setlist.<br>Um rapaz de ouro, Diogo é o árbitro entre as frequentes discussões entre Caio e Vitor. Diogo é quem dá o ponto final e desempata o argumento, ele é o verdadeiro RH da banda.<br><br><br></p>
                     </div>
                 </div>
