create github pages

--- a/epk.html
+++ b/epk.html
@@ -99,7 +99,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-1">Lady Newton&nbsp;</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Bem vindo a página oficial da Lady Newton, somos uma banda de rock de Recife - Pernambuco. Fizemos esse espaço para te mostrar o nosso trabalho. Aqui você encontra todos os materiais que disponibilizamos para os produtores de shows, imprensa e contratantes.<br>Mas, primeiro vamos falar do nosso show, confere os melhores momentos do nosso show no Downtown Pub (04/jan/2020):<br><br></h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Bem vindo a página oficial da Lady Newton, somos uma banda de rock de Recife - Pernambuco. Fizemos esse espaço para te mostrar o nosso trabalho. Aqui você encontra todos os materiais que disponibilizamos para os produtores de shows, imprensa e contratantes.<br>Mas, primeiro vamos falar do nosso show, confira os melhores momentos de uma tocada nossa no Downtown Pub (04/jan/2020):<br><br></h3>
                 
             </div>
         </div>
@@ -165,8 +165,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-fonts-style display-5">
-                    Sente um gostinho do que é ter um evento com a Lady Newton tocando!&nbsp;</div>
+            <div class="section-text align-center mbr-fonts-style display-5">Alguns de nossos covers estão disponíveis no youtube, separamos aqui os melhores:</div>
             <hr class="line" style="width: 25%;">
         </div>
         </div>
@@ -215,7 +214,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VtC4WrAxYo5NE3CMZIKGOOxKI+MObL7Lsvwjq2K9afLs1NpdrUYNOJbcUTvljZa0EebHDCbOaBNaC2ugbpgJG81FJJQOEKNLtQPOLeEY7N5qHojMJXbVm3/3nv2jZL9C.pxXLCsQqIOOPyozY4t0v4gdT26Olaj3uqhozsmJ0pwsEeyBHvfgVu7Gn+Gcnh53euvupIkRPGhRCpDMRsF9+xGHt9WsuHXxNVdonqYSPYjpJMe40zG+i7IRxsSEvbCsp">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jE0k1/t35Uywb0tOh1OIubtnUxm3UoKtUYCOHFpkE5XGSsUTlZj4cR/L0W7K5tdgqvpICcieZ89qjHYGqT72oZg5uINZunfffoC+GvWDkZ/iaXlWhNRNBPRQ1hn2BRNh.Ddaeg+UKTtkabuCT1djdjosNamQRtoRlKMmFMIeTQSxzMBfXdNGruO0NuxIhv8ZFF1nJrecde73pMgrVO5abwFag70xoWQtmDl/sGIRo6prrhLeqSVI7ewu+HL39kUlb">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
