create github pages

--- a/galeriadevideos.html
+++ b/galeriadevideos.html
@@ -205,7 +205,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-2">Siga o nosso canal do Youtube! <a href="#"><script src="https://apis.google.com/js/platform.js"></script>
+                <h2 class="align-center pb-3 mbr-fonts-style display-2">Siga o nosso canal do Youtube! &nbsp; &nbsp;<a href="#"><script src="https://apis.google.com/js/platform.js"></script>
 
 <div class="g-ytsubscribe" data-channelid="UCSvIbkRHKd4szCvhxex0coA" data-layout="full" data-count="default"></div></a></h2>
                 
