create github pages

--- a/espacodofa.html
+++ b/espacodofa.html
@@ -31,7 +31,10 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <!-- Facebook Pixel Code -->
+  <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v7.0"></script>
+
+<!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -374,10 +377,26 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
     <div class="container">
         <div class="inner-container" style="width: 66%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-5">Galeria de fotos com vocês!</div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-2">Quer dar uma ajudinha para a banda?&nbsp;<br>Siga o nosso facebook e o nosso canal do youtube!</div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
+</section>
+
+<section class="mbr-section article content9 cid-rYemFOrjAc" id="content9-9w">
+    
+     
+
+    <div class="container">
+        <div class="inner-container" style="width: 100%;">
+            <hr class="line" style="width: 10%;">
+            <div class="section-text align-center mbr-fonts-style display-5"><a href="#"><div class="fb-like" data-href="https://www.facebook.com/ladynewtonoficial/" data-width="1080" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div></a>&nbsp;<a href="#"><script src="https://apis.google.com/js/platform.js"></script>
+
+<div class="g-ytsubscribe" data-channelid="UCSvIbkRHKd4szCvhxex0coA" data-layout="full" data-count="default"></div></a>
+                </div>
+            <hr class="line" style="width: 10%;">
+        </div>
+        </div>
 </section>
 
 <section class="mbr-gallery mbr-slider-carousel cid-rOTbZU8dib" id="gallery3-8">
