--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/5_clipes_para_maratonar-meta.jpg">
   <meta name="twitter:title" content="[blog] 5 clipes para maratonar">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/estampa1invertida-01-01-2-102x144.png" type="image/x-icon">
   <meta name="description" content="O Corona vírus pegou todo mundo de surpresa, e o maior desafio da nossa geração é se manter tranquilo em casa enquanto o mundo inteiro parece desabar. Mas nada de apocalipse, esses tempos de quarentena são uma excelente oportunidade para sentar no sofá e acabar as séries acumuladas, ler um livro e escutar boa música!  Pensando nisso, eu decidi reservar esse post de blog para te fazer conhecer 5 clipes incríveis, que contemplam as músicas autorais de amigos da Lady Newton. Esses clipes tem uma história massa por trás e minha missão hoje é tentar descrever em palavras a ideia por trás da produção. Então separa a tua pipoca e, nem se preocupe que eu não vou dar spoilers. Que comece a maratona!
 
 Clipes: Malakoff - Liberta
@@ -48,7 +48,20 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
 </script>
 <!-- End MailerLite Universal -->
 
-</head>
+<meta name="theme-color" content="#ff3366">
+<link rel="manifest" href="manifest.json">
+<script src="sw-connect.js"></script>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-640x1136.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-750x1334.png">
+<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1242x2208.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1125x2436.png">
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1536x2048.png">
+<link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1668x2224.png">
+<link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="Lady Newton">
+<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
 <body>
 
 <!-- Analytics -->
@@ -428,7 +441,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
         </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-4i" data-rv-view="639" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-4i" data-rv-view="593" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
