--- a/blog_Mascates-e-Cospefogo-invadiram-a-zona-sul.html
+++ b/blog_Mascates-e-Cospefogo-invadiram-a-zona-sul.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/blog_Mascates-e-Cospefogo-invadiram-a-zona-sul-meta.jpg">
   <meta name="twitter:title" content="[blog] Mascates e Cospefogo invadiram a Zona Sul!">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/estampa1invertida-01-01-2-102x144.png" type="image/x-icon">
   <meta name="description" content="Depois do sucesso da quarta autoral anterior, eu sabia que iria viciar em acompanhar as bandas daqui na jornada de shows autorais. Fiquei de olho no instagram do @thequeenrecife para ver quais seriam as próximas atrações, e por uma coincidência do destino, descobri que a Mascates iria tocar no evento.  Essa banda e a Gelo Baiano me fizeram "abrir os ouvidos" para a nova geração do rock recifense, e  certamente eles influenciam meu modo de compor as músicas da Lady Newton. Eu já estava devendo ir a um show dos meninos a muito tempo, e não iria perder de voltar ao The Queen para fortalecer a cena e conhecer melhor essa galera massa. De brinde ainda pude prestigiar o show da Cospefogo! 
 
 Continua lendo para ver a minha experiência em mais detalhe,que tal  me acompanhar nessa descoberta?">
@@ -44,7 +44,20 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
 </script>
 <!-- End MailerLite Universal -->
 
-</head>
+<meta name="theme-color" content="#ff3366">
+<link rel="manifest" href="manifest.json">
+<script src="sw-connect.js"></script>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-640x1136.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-750x1334.png">
+<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1242x2208.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1125x2436.png">
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1536x2048.png">
+<link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1668x2224.png">
+<link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="Lady Newton">
+<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
 <body>
 
 <!-- Analytics -->
@@ -218,7 +231,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-43" data-rv-view="578" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-43" data-rv-view="532" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
