--- a/blog_PlaylistsQuarentena.html
+++ b/blog_PlaylistsQuarentena.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/blog_PlaylistsQuarentena-meta.jpeg">
   <meta name="twitter:title" content="[blog] Playlists para conhecer na Quarentena!">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/estampa1invertida-01-01-2-102x144.png" type="image/x-icon">
   <meta name="description" content="Durante a quarentena, a Lady Newton vem aproveitando esse tempo para se relacionar com os fãs e divulgar um pouco mais o movimento de renovação que estamos vivenciando no mundo da música. Não sei se você sabe, mas a Lady vem tentando catalogar todos lançamentos musicais recifenses desse ano de 2020. Um trabalho que ainda está no princípio e  é nossa forma de ajudar essa galera massa que vem de forma independente mostrar o seu talento e suas composições.
 
 A Lady Newton não está sozinha nisso, muitos amigos nossos criaram Playlists no Spotify que contemplam artistas da nossa cena. Não sei o quanto você conhece de Spotify, mas isso ajuda demais as bandas! Cada stream é contabilizado e a plataforma paga uma porcentagem de todo dinheiro arrecadado (com as mensalidades) para os artistas proporcionalmente. Mas não é só o aspecto financeiro, o Spotify é uma ferramenta poderosíssima de divulgação, porque ele recomenda aos usuários músicas novas, baseado no que eles andam escutando.
@@ -46,7 +46,20 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
 </script>
 <!-- End MailerLite Universal -->
 
-</head>
+<meta name="theme-color" content="#ff3366">
+<link rel="manifest" href="manifest.json">
+<script src="sw-connect.js"></script>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-640x1136.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-750x1334.png">
+<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1242x2208.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1125x2436.png">
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1536x2048.png">
+<link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1668x2224.png">
+<link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="Lady Newton">
+<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
 <body>
 
 <!-- Analytics -->
@@ -305,7 +318,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-80" data-rv-view="867" style="background-color: rgb(19, 19, 19); padding-top: 1.5rem; padding-bottom: 1.5rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-80" data-rv-view="821" style="background-color: rgb(19, 19, 19); padding-top: 1.5rem; padding-bottom: 1.5rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
