--- a/epk.html
+++ b/epk.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/estampa1invertida-01-01-2-102x144.png" type="image/x-icon">
   <meta name="description" content="Eletronic Press Kit - Material para produtores, mídia e pessoas que querem conhecer o lado sério da Lady Newton. ">
   
   <title>EPK</title>
@@ -28,7 +28,20 @@
   
   
 
-</head>
+<meta name="theme-color" content="#ff3366">
+<link rel="manifest" href="manifest.json">
+<script src="sw-connect.js"></script>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-640x1136.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-750x1334.png">
+<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1242x2208.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1125x2436.png">
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1536x2048.png">
+<link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1668x2224.png">
+<link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="Lady Newton">
+<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
 <body>
 
 <!-- Analytics -->
@@ -214,7 +227,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZxrHTNAVsXC6pUszSCYnlqBYIUa+yeLkm5KT6vuB8g144JN+sSrKo1fAzRyUYQZMlAGQ5UEBTc0gfFtCELxrhV/eclbl4uzf1PkodmjjhDyey7nEdghCmVqs2gRgD0cZ.rlLHNWRDjW9ZOYPlY6bceHS/+vCKi79zi1AN/zG0iThLBMb8IjoFnq/WkBFo8D1O6LC2a32FVublKHV70MA+xwrmUKcftwJGbAmmMsVeiorJRhoFAQ393yYIhxJH7Ym0">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VtS6Gw+jd2aagb5jfi9zWLOKNu7q199Fj9L67Fj7irmBx89zvjIzCviilh0I/KZObe1rOgqo1Es5x6co8sEAXFqf9Au3SXQXa6i6uqjbJfKRtV8T/IkmvG5syr8w8kSp.Tt7CC2uVh2EdS5CYJalVB0nMav2eH4Tn3g5dBZa1TFoOo3APnKw7FNhBK2W1Ag3CEQ3xxM+KzpGuMmGL1nPyP0XfW5e5cdP9mJW2Hb9G1gT9YIvsVZA4U66YAeu4EVcg">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
